<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<!-- <version>2.4.4</version> -->
		<version>3.0.0</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.wldst</groupId>
	<artifactId>lemodo</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>lemodo</name>
	<description>less is more ,duo is chinese more, java lessCode ,Data Oriented Program</description>
	<properties>
		<java.version>19</java.version>
		<skipTests>true</skipTests>
		<knife4j.version>2.0.4</knife4j.version>
		<mysql.version>8.0.26</mysql.version>
		<poi.version>3.15</poi.version>
	</properties>
	<dependencies>
		<!-- <dependency> <groupId>us.codecraft</groupId> <artifactId>webmagic-core</artifactId> 
			<version>0.7.3</version> </dependency> -->
		<!--<dependency> <groupId>org.neo4j.driver</groupId> <artifactId>neo4j-java-driver</artifactId> 
			<version>1.7.5</version> </dependency> -->
		<!-- https://mvnrepository.com/artifact/org.neo4j.driver/neo4j-java-driver -->
		<!--Knife4j API-->
		<!-- <dependency> <groupId>com.github.xiaoymin</groupId> <artifactId>knife4j-micro-spring-boot-starter</artifactId> 
			<version>${knife4j.version}</version> </dependency> <dependency> <groupId>com.github.xiaoymin</groupId> 
			<artifactId>knife4j-spring-boot-starter</artifactId> <version>${knife4j.version}</version> 
			</dependency> -->
		<dependency>
			<groupId>org.neo4j.driver</groupId>
			<artifactId>neo4j-java-driver</artifactId>
		</dependency>
		<dependency>
			<groupId>
				org.dom4j</groupId>
			<artifactId>dom4j</artifactId>
			<version>2.1.3</version>
		</dependency>
		<dependency>
		<groupId>com.deepoove</groupId>
		<artifactId>poi-tl</artifactId>
		<version>1.12.1</version>
		<exclusions>
            <exclusion>
                <groupId>
						xml-apis</groupId>
                <artifactId>xml-apis</artifactId>
				</exclusion>
            <exclusion>
                <groupId>
						xml-apis-ext</groupId>
                <artifactId>xml-apis-ext</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>
				org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>${poi.version}</version>
		</dependency>
		<dependency>
			<groupId>
				org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
			<version>${poi.version}</version>
		</dependency>
		<dependency>
			<groupId>
				org.apache.poi</groupId>
			<artifactId>poi-ooxml-schemas</artifactId>
			<version>${poi.version}</version>
		</dependency>
		<dependency>
			<groupId>
				org.apache.poi</groupId>
			<artifactId>poi-scratchpad</artifactId>
			<version>${poi.version}</version>
		</dependency>
		<dependency>
			<groupId>
				com.itextpdf</groupId>
			<artifactId>itext7-core</artifactId>
			<version>7.1.12</version>
			<type>
				pom</type>
		</dependency>
		<!-- ai start-->
<!--		<dependency>-->
<!--			<groupId>org.springframework.ai</groupId>-->
<!--			<artifactId>spring-ai-ollama-spring-boot-starter</artifactId>-->
<!--		</dependency>-->
		<dependency>
			<groupId>io.milvus</groupId>
			<artifactId>milvus-sdk-java</artifactId>
			<version>2.5.4</version>
		</dependency>
		<!-- ai end-->
		<!-- <dependency>
          <groupId>org.quartz-scheduler</groupId>
          <artifactId>quartz</artifactId>
          </dependency>-->
  <dependency>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-quartz</artifactId>
</dependency>
   <dependency>
			<groupId>org.openjdk.jol</groupId>
			<artifactId>jol-core</artifactId>
			<version>
				0.16</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<!-- -->
			<groupId>org.neo4j</groupId>
			<artifactId>
				neo4j</artifactId>
			<version>3.4.0</version>
		</dependency>
		<!--<dependency>
			<groupId>
				com.microsoft.sqlserver</groupId>
			<artifactId>sqljdbc4</artifactId>
			<version>4.0</version>
		</dependency>-->

		<dependency>
			<groupId>
				org.springframework.security</groupId>
			<artifactId>spring-security-crypto</artifactId>
		</dependency>

		<dependency>
			<groupId>
				org.apache.httpcomponents</groupId>
			<artifactId>httpcore</artifactId>
			<scope>compile</scope>
		</dependency>
		
		<dependency>
			<groupId>
				com.squareup.okhttp3</groupId>
			<artifactId>okhttp</artifactId>
			</dependency>
		<dependency>
			<groupId>
				com.qliu6</groupId>
			<artifactId>property</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>
				javax.validation</groupId>
			<artifactId>validation-api</artifactId>
			<version>2.0.1.Final</version>
		</dependency>
		<dependency>
			<groupId>
				com.rometools</groupId>
			<artifactId>rome</artifactId>
			<version>1.8.0</version>
		</dependency>
		<dependency>
			<groupId>
				rome</groupId>
			<artifactId>rome</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>
				com.oracle</groupId>
			<artifactId>ojdbc6</artifactId>
			<version>11.2.0</version>
		</dependency>
		<dependency>
			<groupId>
				org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-neo4j</artifactId>
		</dependency>
		<dependency>
			<groupId>
				org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-thymeleaf</artifactId>
		</dependency>
		<dependency>
			<groupId>
				org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
			<!-- -->
			<exclusions>
				<exclusion>
					<groupId>
						org.springframework.boot</groupId>
					<artifactId>
						spring-boot-starter-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>
				org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
			<exclusions>
				<!-- -->
				<exclusion>
					<groupId>
						org.springframework.boot</groupId>
					<artifactId>
						spring-boot-starter-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>
				org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-aop</artifactId>
		</dependency>
		<dependency>
			<!-- -->
			<groupId>
				org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-log4j2</artifactId>
		</dependency>
		<dependency>
			<groupId>
				org.mapdb</groupId>
			<artifactId>mapdb</artifactId>
			<version>3.0.8</version>
		</dependency>
		<dependency>
			<groupId>
				org.apache-extras.beanshell</groupId>
			<artifactId>bsh</artifactId>
			<version>2.0b6</version>
		</dependency>
		<!-- -->
		<dependency>
			<groupId>com.alibaba.fastjson2</groupId>
			<artifactId>fastjson2</artifactId>
			<version>2.0.51</version>
		</dependency>
		<dependency>
			<groupId>
				com.alibaba</groupId>
			<artifactId>druid</artifactId>
			<version>1.1.3</version>
		</dependency>
		<dependency>
			<groupId>
				org.codehaus.jackson</groupId>
			<artifactId>jackson-mapper-asl</artifactId>
			<version>1.9.13</version>
		</dependency>
		<dependency>
			<groupId>commons-dbutils</groupId>
			<artifactId>
				commons-dbutils</artifactId>
			<version>1.7</version>
		</dependency>
		<dependency>
			<groupId>
				org.apache.commons</groupId>
			<artifactId>commons-dbcp2</artifactId>
		</dependency>
		<!---->
		<dependency>
			<groupId>
				commons-fileupload</groupId>
			<artifactId>commons-fileupload</artifactId>
			<version>1.3.3</version>
		</dependency>
		<dependency>
			<groupId>
				commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.5</version>
		</dependency>
		<!-- activiti -->
		<!-- <dependency> <groupId>org.activiti</groupId> <artifactId>activiti-spring-boot-starter</artifactId> 
			<version>7.1.0.M4</version> </dependency> <dependency> <groupId>org.activiti.dependencies</groupId> 
			<artifactId>activiti-dependencies</artifactId> <version>7.1.0.M4</version> 
			<type>pom</type> </dependency> -->
		<!---->
		<dependency>
			<groupId>
				org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-mail</artifactId>
		</dependency>
		<!--drools-->
		<dependency>
			<groupId>
				org.drools</groupId>
			<artifactId>drools-core</artifactId>
			<version>7.6.0.Final</version>
		</dependency>
		<dependency>
			<groupId>
				org.drools</groupId>
			<artifactId>drools-compiler</artifactId>
			<version>7.6.0.Final</version>
		</dependency>
		<dependency>
			<groupId>
				org.drools</groupId>
			<artifactId>drools-templates</artifactId>
			<version>7.6.0.Final</version>
		</dependency>
		<dependency>
			<groupId>
				org.kie</groupId>
			<artifactId>kie-api</artifactId>
			<version>7.6.0.Final</version>
		</dependency>
		<dependency>
			<groupId>
				org.kie</groupId>
			<artifactId>kie-spring</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.springframework</groupId>
					<artifactId>
						spring-tx</artifactId>
				</exclusion>
				<exclusion>
					<groupId>
						org.springframework</groupId>
					<artifactId>spring-beans</artifactId>
				</exclusion>
				<exclusion>
					<groupId>
						org.springframework</groupId>
					<artifactId>spring-core</artifactId>
				</exclusion>
				<exclusion>
					<groupId>
						org.springframework</groupId>
					<artifactId>spring-context</artifactId>
				</exclusion>
			</exclusions>
			<version>
				7.6.0.Final</version>
		</dependency>
		<dependency>
			<groupId>
				org.springframework.statemachine</groupId>
			<artifactId>
				spring-statemachine-core</artifactId>
			<version>2.1.3.RELEASE</version>
		</dependency>
		<!--<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.junit.vintage</groupId>
					<artifactId>junit-vintage-engine</artifactId>
				</exclusion>
			</exclusions>
		</dependency>-->
		<dependency>
			<groupId>
				org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-websocket</artifactId>
		</dependency>
		<dependency>
			<groupId>
				org.java-websocket</groupId>
			<artifactId>Java-WebSocket</artifactId>
			<version>1.5.3</version>
		</dependency>
		<dependency>
			<groupId>
				com.google.zxing</groupId>
			<artifactId>core</artifactId>
			<version>3.3.0</version>
		</dependency>
		<dependency>
			<groupId>
				com.google.zxing</groupId>
			<artifactId>javase</artifactId>
			<version>3.3.0</version>
		</dependency>
		<!-- <dependency> <groupId>org.springframework.cloud</groupId> <artifactId>spring-cloud-starter-openfeign</artifactId> 
			</dependency> <dependency> <groupId>io.github.openfeign</groupId> <artifactId>feign-okhttp</artifactId> 
			</dependency> -->
		<!--SDK -->
		<dependency>
			<groupId>
				com.iflytek.msp.lfasr</groupId>
			<artifactId>lfasr-sdk</artifactId>
			<version>3.0.1</version>
			<scope>
				system</scope>
			<systemPath>${project.basedir}/lib/lfasr-sdk-3.0.1.jar</systemPath>
		</dependency>  
		<dependency>
			<groupId>mysql</groupId>  
    <artifactId>mysql-connector-java</artifactId>  
    <version>${mysql.version}</version>
		</dependency>
		<dependency>
        <groupId>com.belerweb</groupId>
        <artifactId>pinyin4j</artifactId>
        <version>2.5.1</version>
    </dependency>
		<!--
		<dependency>
			<groupId>mysql</groupId>  
    <artifactId>mysql-connector-java</artifactId>
			<version>5.1.34</version>
			<scope>
				system</scope>
			<systemPath>${project.basedir}/lib/mysql-connector-java-5.1.34.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>oracle</groupId>
			<artifactId>driver</artifactId>
			<version>6</version>
			<scope>
				system</scope>
			<systemPath>${project.basedir}/lib/ojdbc6.jar</systemPath>
		</dependency> -->
		<!---->
		<dependency>
			<groupId>
				com.alibaba.fastjson2</groupId>
			<artifactId>fastjson2</artifactId>
			<version>2.0.4</version>
		</dependency>
		<dependency>
			<groupId>
				org.apache.httpcomponents</groupId>
			<artifactId>httpmime</artifactId>
		</dependency>
		<dependency>
			<groupId>cn.bigmodel.openapi</groupId>
			<artifactId>oapi-java-sdk</artifactId>
			<version>release-V4-2.0.2</version>
			<exclusions>
				<exclusion>
					<groupId>com.alibaba.fastjson2</groupId>
					<artifactId>fastjson2</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.kjetland</groupId>
					<artifactId>mbknor-jackson-jsonschema_2.13</artifactId>
				</exclusion>
				<!--				<exclusion>-->
				<!--					<groupId>com.squareup.retrofit2</groupId>-->
				<!--					<artifactId>converter-jackson</artifactId>-->
				<!--				</exclusion>-->
				<!--				<exclusion>-->
				<!--					<groupId>cn.hutool</groupId>-->
				<!--					<artifactId>hutool-all</artifactId>-->
				<!--				</exclusion>-->
				<exclusion>
					<groupId>com.kjetland</groupId>
					<artifactId>mbknor-jackson-jsonschema-embeddable</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!--
		<dependency>
			<groupId>org.apache.tomcat.embed</groupId>
			<artifactId>tomcat-embed-jasper</artifactId>
		</dependency> -->
	</dependencies>
	<build>
		<resources>
			<resource>
				<directory>
					src/main/resources</directory>
				<filtering>true</filtering>
				<includes>
					<include>*.yml</include>
					<include>
						*.properties</include>
					<include>*.json</include>
					<include>*.xml</include>
				</includes>
			</resource>
			<resource>
				<!-- -->
				<directory>
					src/main/webapp</directory>
				<!-- META-INF/resources -->
				<targetPath>META-INF/resources</targetPath>
				<!-- -->
				<includes>
					<include>
						*.*</include>
				</includes>
			</resource>
			<resource>
				<directory>
					src/main/resources</directory>
				<filtering>false</filtering>
				<includes>
					<include>static/**</include>
					<include>
						i18n/**</include>
					<include>web/**</include>
				</includes>
			</resource>
			<resource>
				<directory>
					src/main/resources</directory>
				<excludes>
					<exclude>win/*</exclude>
					<exclude>native/*</exclude>
				</excludes>
			</resource>
			<resource>
				<directory>
					src/main/resources/${env}</directory>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>
					org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<arguments>
						--enable-preview</arguments>
					<jvmArguments>--enable-preview --add-opens
						java.desktop/java.awt.font=ALL-UNNAMED --add-opens
						java.base/java.text=ALL-UNNAMED --add-opens
						java.base/java.lang.reflect=ALL-UNNAMED --add-opens
						java.base/java.util=ALL-UNNAMED --add-opens
						java.base/sun.nio.ch=ALL-UNNAMED --add-opens
						java.base/java.lang=ALL-UNNAMED
					</jvmArguments>
					<mainClass>
						com.wldst.ruder.LemodoApplication</mainClass>
					<!-- <classesDirectory>../classes </classesDirectory> -->
				</configuration>
			</plugin>
			<plugin>
				<groupId>
					org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>
						${java.version}</source>
					<target>${java.version}</target>
					<compilerArgs> --enable-preview</compilerArgs>
					<!-- enable-preview -->
				</configuration>
			</plugin>
			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-shade-plugin</artifactId> 
				<executions> <execution> <phase>package</phase> <goals> <goal>shade</goal> 
				</goals> <configuration> <transformers> <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer"> 
				<mainClass>com.yunshouhu.apkprotect.MainHelper</mainClass> </transformer> 
				</transformers> </configuration> </execution> </executions> </plugin> <plugin> 
				<groupId>com.github.wvengen</groupId> <artifactId>proguard-maven-plugin</artifactId> 
				<version>2.0.11</version> <executions> <execution> <phase>package</phase> 
				<goals> <goal>proguard</goal> </goals> </execution> </executions> <configuration> 
				<obfuscate>true</obfuscate> <proguardInclude>${basedir}/proguard.cfg</proguardInclude> 
				<attach>true</attach> <attachArtifactClassifier>proguard</attachArtifactClassifier> 
				</configuration> </plugin> -->
		</plugins>
	</build>
	<repositories>
		<repository>
			<id>
				spring-milestones</id>
			<name>Spring Milestones</name>
			<url>
				https://repo.spring.io/milestone</url>
		</repository>
		<repository>
			<id>
				spring-release</id>
			<name>Spring release</name>
			<url>
				https://repo.spring.io/release</url>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>
				spring-milestones</id>
			<name>Spring Milestones</name>
			<url>
				https://repo.spring.io/milestone</url>
		</pluginRepository>
		<pluginRepository>
			<id>
				spring-release</id>
			<name>Spring release</name>
			<url>
				https://repo.spring.io/release</url>
		</pluginRepository>
	</pluginRepositories>
</project>
